[package]
name = "obric-v2-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "^0.4.5"
obric-solana = { path = "../accounts/programs/obric-solana" }
anchor-lang = "^0.29.0"
anyhow = "^1"
solana-sdk = "^1.18.0"
spl-token = { version = "^3.5", features = ["no-entrypoint"] }

[dev-dependencies]
num = "0.4.0"
solana-client = "1.14.11"
